stylesheets/root.css
*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: "Sofia Sans", sans-serif;
}

html {
    scroll-behavior: smooth;
  }

body{
    max-width: 100vw;
}

:root{
    --black:#202020; 
    --white:#FCFCFC; 
    --cherry:#CC3652;
    --cherry-light:#DB7184;
    --cherry-dark:#B72E48;
    --grey-n1:#909090; 
    --grey-n2:#BFBFBF; 
}


header{
    background-color: var(--black);
}

section{
    padding: 30px 0px;
}

section:nth-of-type(1){
    padding-top:50px; 
}

section:nth-of-type(5){
    padding-bottom:50px;
}

header, footer{
    padding:50px 0px;
}

/*Responsive Nav Bar Styling*/

    /*Styling Header Nav Bar*/
        .header-nav{
            display: flex;
            flex-direction: row;
            justify-content: space-between;
            align-items: center; 
        }

        .header-nav-wrapper{
            max-width: 1320px;
            margin: 0 auto;
            padding:0 30px; 
        }

        .nav {align-self: center;}

        nav ul {
            display: flex;
            flex-direction: row;
            list-style: none;
            align-items: center;
        }
    
    /*Styling Header Nav Bar Elements*/
        .hamburger{
            display: none;
        }
        
        nav ul li a {
            text-decoration: none;
            color: #777171;
            font-size: 21px;
            align-self: center; 
        }

        li:nth-child(2){
            color: var(--white); 
        }

        .nav-bar ul{
            width: fit-content;
            max-width: 660px;
            display: flex;
            column-gap: 60px;  
        }
    
        #logo-nav{
            width: 220px; 
            position:relative;
            left:-4px;
            fill: var(--white);
        }

        @media screen and (max-width:540px) {
            #logo-nav{width:180px}
        }

        .nav-bar-links li a:hover, #logo-nav:hover{
            color: var(--cherry); 
            fill: var(--cherry);
        }

        body:has(.hamburger:hover) .hb-line{
            background: var(--cherry);
        }

        .nav-bar-links li a:active, #logo-nav:active{
            color: var(--cherry-light); 
            fill: var(--cherry-light);
        }

    /*Basic Nav Bar Responsiveness*/
        @media screen and (max-width:960px) { 
            .hamburger{
                display: block;
                cursor: pointer;
            }

            .hb-line {
                width: 15px;
                height: 1.5px;
                background: var(--white);
                margin: 5px 0;
            }

            .nav-bar{
                height: 0;
                position: absolute;
                top:85px;
                left: 0;
                right: 0;
                width: 100vw;
                background: var(--black);
                transition: 0.2s ease;
                overflow: hidden;
            }

            .nav-bar.active{
                height: 190px; 
                transition: 0.4s ease;
            }

            .nav-bar.active ul{
                opacity: 1;
            }

            .nav-bar ul{
                display:flex;
                margin: 0px 30px 50px 30px; 
                width: fit-content;
                transition: 0.2s ease;
                flex-direction: column;
                align-items: flex-start;
                row-gap:6px;
                opacity: 0;
            }

            .nav-bar ul li a {
                font: size 24px;
            }
        }

/*Footer CSS*/
    footer{
        background-color:#F5F5F5;
    }

    .footer-wrapper{
        max-width: 1320px; 
        margin:0 auto;
        padding: 0px 30px;
    }

    .footer-upper{
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        gap:60px
    }

    .footer-subdomains{
        display: flex;
        justify-content: space-between;
        flex-flow: row wrap; 
        width: 100%;
        max-width: 650px; 
    }

    #logo-footer{
        width: 220px; 
        fill:var(--black);
    }

    #logo-footer:visited{ 
        fill: var(--cherry-dark);
    }

    #logo-footer:hover{ 
        fill: var(--cherry);
    }

    #logo-footer:active{ 
        fill: var(--cherry-light);
    }


    .footer-subdomains a{
        text-decoration: none;
        color: var(--grey-n1);
        font-size: 21px;
        font-weight: 500;
    }

    .footer-subdomains a:visited .email-addresses a:visited{
        color: var(--grey-n2);
    }

    .footer-subdomains a:hover, .email-addresses a:hover{
        color:var(--cherry);
    }

    .footer-subdomains a:active, .email-addresses a:active{
        color:var(--cherry-light);
    }

    .footer-hr{
        margin-top: 30px;
        margin-bottom:20px; 
        border-top: 3px solid #C9C9C9; 
    }

    .footer-lower{
        display: flex;
        flex-direction: row-reverse;
        justify-content: flex-end;
        align-items: center;
        column-gap:32px;  
    }

    .email-addresses{
        display: flex;
        flex-flow:row wrap;
        column-gap: 32px; 
    }

    .email-addresses a{
        text-decoration: none; 
        font-size:21px;
        font-weight: 400;
        color: var(--black);
    }

    .sm-icons {
        display: flex;
        column-gap: 18px;
    }

    .sm-icons img {
        width: 32px;
    }
    

    @media screen and (min-width:650px) and (max-width:850px){
        #logo-footer{
            width:220px; 
        }

        .footer-subdomains{
            max-width: fit-content; 
            align-items: center;
            flex-wrap: wrap;
            justify-content: space-between;
            column-gap: 15px;
            row-gap: 6px;
        }

        .footer-subdomains a{
            font-size:20px;
            width:fit-content;
        }
    }

    @media screen and (max-width:649px){
        #logo-footer{
            width:220px; 
            position: relative;
            left:-6px;
        }

        .footer-upper{
            flex-direction: column;
            align-items: flex-start;
            gap: 21px 0px;
        }

        .footer-subdomains{
            display: grid;
            grid-template-rows: repeat(3, 1fr);
            grid-template-columns: repeat(2, 1fr);
            gap: 12px 12px;
        }

        .footer-lower{
            flex-direction: column;
            align-items: flex-start;
            row-gap: 9px; 
        }

        .email-addresses{
            row-gap:6px;
        }

        .footer-subdomains a, .email-addresses a{
            font-size:20px;
            width:fit-content;
        }

        .footer-hr{
            margin:20px 0px;
        }
    }

    @media screen and (max-width:540px) {
        #logo-footer{width:180px}
    }

